--- a/src/styles/actor/sidebar/_armor.scss
+++ b/src/styles/actor/sidebar/_armor.scss
@@ -151,7 +151,9 @@
                 border-bottom: 1px solid transparent;
                 width: 75%;
                 input {
-                    @include input-glow;
+                    &:hover {
+                        @include input-glow;
+                    }
                     &:focus {
                         border-bottom: 1px solid var(--tertiary);
                     }
