--- a/src/styles/actor/sidebar/_index.scss
+++ b/src/styles/actor/sidebar/_index.scss
@@ -118,12 +118,13 @@ aside {
             display: inline-flex;
             align-items: center;
             padding-bottom: 2px;
-            animation-play-state: paused;
 
-            &:hover {
-                animation-play-state: running;
-                @include wobble;
-                @include animate-infinite;
+            svg {
+                animation-play-state: paused;
+                &:hover {
+                    animation-play-state: running;
+                    @include rotate;
+                }
             }
         }
         select {
